<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amador.manageproducts.view.Login_Activity">

    <ImageView
        android:contentDescription="@string/contentdescription"
        android:layout_marginBottom="@dimen/widget_margin_top"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgLogo"
        android:src="@drawable/cruz"
        android:layout_width="140dp"
        android:layout_height="140dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/imgLogo"
        app:hintTextAppearance="@style/hint"
        app:errorTextAppearance="@style/error"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        android:id="@+id/tilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/hintUser"
            android:id="@+id/edtLoginUser"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:hintTextAppearance="@style/hint"
        app:errorTextAppearance="@style/error"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        android:id="@+id/tilPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilUser">

        <EditText
            android:hint="@string/hintPass"
            android:id="@+id/edtLoginPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tilPass"
        android:text="@string/chbLoginRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbLoginRemember" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tilPass"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin" />


</RelativeLayout>
